wither_derive/tests/fail/model-read-concern-invalid-syntax.rs
use serde::{Serialize, Deserialize};
use wither::Model;

#[derive(Serialize, Deserialize, Model)]
#[model(read_concern=ReadConcern::Majority)]
struct DerivedModel {
    #[serde(rename="_id", skip_serializing_if="Option::is_none")]
    pub id: Option<wither::bson::oid::ObjectId>,
}

fn main() {
    assert!(DerivedModel::read_concern().is_none());
}
